# sentinel-signal-mcp

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/sentinel_signal_mcp/: __init__.py  __main__.py  client.py  config.py  credentials.py  server.py
tests/: test_client_errors.py  test_client_methods.py  test_credentials.py
