[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-signal-mcp"
version = "0.1.0"
description = "Python MCP server for Sentinel Signal scoring, limits, usage, and feedback tools"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sentinel Signal" }
]
keywords = ["mcp", "model-context-protocol", "sentinel-signal", "api", "agents"]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0.0",
]

[project.urls]
Homepage = "https://sentinelsignal.io"
Documentation = "https://sentinelsignal.io/portal"
Repository = "https://github.com/sentinelsignal/sentinel-signal-mcp"

[project.scripts]
sentinel-signal-mcp = "sentinel_signal_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_signal_mcp"]
