[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-signal-mcp"
version = "0.1.0"
description = "Python MCP server for Sentinel Signal scoring, limits, usage, and feedback tools"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sentinel Signal" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
keywords = ["mcp", "model-context-protocol", "sentinel-signal", "api", "agents"]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0.0,<2",
]

[project.urls]
Homepage = "https://sentinelsignal.io"
Documentation = "https://sentinelsignal.io/portal"
Repository = "https://github.com/sentinelsignal/sentinel-signal-mcp"
PyPI = "https://pypi.org/project/sentinel-signal-mcp/"
Changelog = "https://github.com/sentinelsignal/sentinel-signal-mcp/blob/main/CHANGELOG.md"

[project.scripts]
sentinel-signal-mcp = "sentinel_signal_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "build>=1,<2",
  "twine>=5,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_signal_mcp"]
