[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "sentinel-signal-mcp"
version = "0.1.3"
description = "Hosted and local MCP tools for healthcare claims workflow scoring, usage, limits, and feedback"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "Sentinel Signal" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Environment :: Console",
]
keywords = ["mcp", "model-context-protocol", "sentinel-signal", "healthcare", "claims", "agents"]
dependencies = [
  "httpx>=0.27,<1",
  "mcp>=1.0.0,<2",
]

[project.urls]
Homepage = "https://pypi.org/project/sentinel-signal-mcp/"
Documentation = "https://sentinelsignal.io/portal"
Repository = "https://github.com/sentinelsignal/sentinel-signal-mcp"
Issues = "https://github.com/sentinelsignal/sentinel-signal-mcp/issues"
PyPI = "https://pypi.org/project/sentinel-signal-mcp/"
Changelog = "https://github.com/sentinelsignal/sentinel-signal-mcp/blob/main/CHANGELOG.md"

[project.scripts]
sentinel-signal-mcp = "sentinel_signal_mcp.server:main"

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "build>=1,<2",
  "twine>=5,<7",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sentinel_signal_mcp"]
